# aiven

./: README.md  pyproject.toml  yoyo.ini
.github/workflows/: ci.yml
aiven/: consumer.py  producer.py  settings.py  types.py  utils.py
aiven/migrations/: 20220504_01_cIShB-initial.py
aiven/tests/: itest_end_to_end.py  test_producer.py
